# Supilcat1

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.cpp  index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  testing.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task4/tests/03-weather/: WeatherMock.cpp  WeatherTestCase.cpp
task5/cmake-with-flask/: Dockerfile
